# robocup-at-home-2021-challenge

./: Dockerfile  README.md  env.sh
pumas_navigation/act_pln/: CMakeLists.txt
pumas_navigation/act_pln/scripts/: 11_moveit_anyplane_whole_docker_version.ipynb  takeshi_smach_go_get_it.py  takeshi_smach_go_get_it_bkp.py  takeshi_smach_task2_just_grasp.py  utils.py  utils_takeshi.py
pumas_navigation/act_pln/scripts/.ipynb_checkpoints/: 11_moveit_anyplane_whole_docker_version-checkpoint.ipynb
pumas_navigation/knowledge/hri/: config.rviz
pumas_navigation/navigation_start/launch/: navigation_OSS.launch
pumas_navigation/tools/takeshi_tools/: CMakeLists.txt
pumas_navigation/tools/takeshi_tools/src/takeshi_tools/: nav_tool_lib.py  nav_tool_lib_OSS.py
robocup_challenge/: CMakeLists.txt
robocup_challenge/launch/: run.launch
robocup_challenge/pumas_navigation/act_pln/: CMakeLists.txt  package.xml
robocup_challenge/pumas_navigation/act_pln/scripts/: utils.py
robocup_challenge/pumas_navigation/navigation_start/launch/: navigation.launch
robocup_challenge/scripts/: takeshi_smach_11.py  takeshi_smach_go_get_it.py  takeshi_smach_task1.py  utils.py  utils_takeshi.py
